# jupyterlab-data-explorer

./: .editorconfig  .eslintrc.js  .gitignore  .lintstagedrc  .npmrc  .prettierignore  .stylelintrc.json  .yarnrc  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  Untitled.ipynb  conftest.py  datasets.yml  install.json  lerna.json  package.json  press_release.md  pyproject.toml  setup.py  tsconfig.config.json  tsconfig.json  tsconfig.test.json  tsconfigbase.json  user-stories.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  test.yml
binder/: environment.yml  postBuild  requirements.txt  start
data/: demodb.sqlite
dataregistry/: package.json  tsconfig.json
dataregistry-core/: package.json  tsconfig.json
dataregistry-csvviewer/: package.json  tsconfig.json
dataregistry-extension/: .eslintrc.js  package.json  style.css  tsconfig.json
datasets/: sample.dataset
docs/: development.md  usage.md
jupyterlab_dataregistry/: __init__.py  command_store.py  dataregistry.py  dataset.py  dataset_store.py  handlers.py  utils.py
notebooks/: Refence.ipynb  Table Data.ipynb  Table.ipynb  datasets.ipynb  datasets.py  demo.ipynb  tmp.csv
py_packages/dataregistry/: .gitignore  setup.cfg
scripts/: registry.adduser.js
src/: commands.ts  csv-widget.tsx  dataregistry.ts  dataset-list.tsx  dataset-panel.tsx  dataset-search.tsx  dataset.ts  handler.ts  index.ts  mime-extension.ts  model.ts  templates.ts
style/: base.css
ui-tests/: package.json
workflows/: check-release.yml
(+94 files in other folders)
