[metadata]
name = jupyter_dataregistry
version = 0.0.1
author = Project Jupyter
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jupyterlab/jupyterlab-data-explorer
project_urls =
    Bug Tracker = https://github.com/jupyterlab/jupyterlab-data-explorer/issues
classifiers =
    Platform: Linux
    Platform: Mac OS X
    Platform: Windows
    Classifier: License :: OSI Approved :: BSD License
    Classifier: Programming Language :: Python
    Classifier: Programming Language :: Python :: 3
    Classifier: Programming Language :: Python :: 3.6
    Classifier: Programming Language :: Python :: 3.7
    Classifier: Programming Language :: Python :: 3.8
    Classifier: Programming Language :: Python :: 3.9
    Classifier: Framework :: Jupyter
    Classifier: Framework :: Jupyter :: JupyterLab
    Classifier: Framework :: Jupyter :: JupyterLab :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
